# Hydra

./: .dockerignore  .env.example  .gitignore  Dockerfile  MANIFEST.in  README.md  TODO-frontend.md  docker-compose.yml  frontend-spec.md  pyproject.toml  react-reference.js
.github/workflows/: ci.yml  docker.yml  publish.yml
examples/: report_generation.py  simple_research.py
frontend/: index.html  vite.config.js
frontend/src/: App.jsx  HistoryPage.jsx  OrchestrationView.jsx  ResultView.jsx  mockOrchestration.js  tokens.jsx  useWebSocket.js
hydra/: __init__.py  __main__.py  agent.py  agent_factory.py  audit.py  brain.py  config.py  events.py  execution_engine.py  file_processor.py  history.py  logger.py  models.py  post_brain.py  server.py  state_manager.py  tool_registry.py
hydra/tools/: _security.py  base.py  code_tools.py  data_tools.py  design_tokens.py  document_tools.py  file_manager_tools.py  file_tools.py  language_tools.py  memory_tools.py  pdf_tools.py  reader_tools.py  research_tools.py  template_tools.py  validation_tools.py
hydra_agents/: __init__.py  __main__.py  agent.py  agent_factory.py  audit.py  brain.py  cli.py  config.py  events.py  execution_engine.py  file_processor.py  post_brain.py  server.py  state_manager.py  tool_registry.py
hydra_agents/tools/: __init__.py  _security.py  base.py  code_tools.py  data_tools.py  document_tools.py  file_manager_tools.py  file_tools.py  language_tools.py  memory_tools.py  pdf_tools.py  reader_tools.py  regex_tools.py  research_tools.py  screenshot_tools.py  template_tools.py  validation_tools.py
tests/: __init__.py  test_12_fixes.py  test_agent.py  test_audit.py  test_audit_logging.py  test_brain.py  test_confirmation_gates.py  test_document_tools.py  test_events.py  test_execution_engine.py  test_file_processor.py  test_fix_streaming_eventbus.py  test_new_fixes.py  test_output_sanitization.py  test_post_brain.py  test_regex_tool.py  test_retry_loop.py  test_sanitization.py  test_screenshot_tool.py  test_security.py  test_server.py  test_state_manager.py  test_streaming.py  test_upload_fixes.py
