[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydra-agents"
version = "1.0.1"
description = "Dynamic multi-agent orchestration framework powered by litellm"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ai", "agents", "orchestration", "llm", "litellm", "multi-agent"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "litellm>=1.40.0,!=1.82.7,!=1.82.8",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "structlog>=24.0.0",
    "jsonschema>=4.22.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=1.0.0",
    "matplotlib>=3.8.0",
    "pymupdf>=1.23.0",
    "Jinja2>=3.1.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "aiosqlite>=0.19.0",
    "python-multipart>=0.0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "bump-my-version>=0.28.0",
]

[project.scripts]
hydra-agents = "hydra_agents.cli:main"

[project.urls]
Homepage = "https://github.com/Metalheadache/Hydra"
Repository = "https://github.com/Metalheadache/Hydra"
Issues = "https://github.com/Metalheadache/Hydra/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["hydra_agents*"]

[tool.setuptools.package-data]
hydra_agents = ["py.typed", "frontend_dist/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["hydra_agents"]
omit = ["tests/*", "examples/*"]

# ── Version bumping ────────────────────────────────────────────────────────────
# Usage:
#   pip install -e ".[dev]"
#   bump-my-version bump patch   # 1.0.1 → 1.0.2  (also commits + creates tag v1.0.2)
#   bump-my-version bump minor   # 1.0.1 → 1.1.0
#   bump-my-version bump major   # 1.0.1 → 2.0.0
#
# Then push the tag to trigger CI:
#   git push && git push --tags
[tool.bumpversion]
current_version = "1.0.1"
commit = true
tag = true
tag_name = "v{new_version}"
tag_message = "Release v{new_version}"
message = "bump version: {current_version} → {new_version}"
commit_args = "--no-verify"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
